PR target/51532 * config/m68k/m68k.h (FL_CAS, TARGET_CAS): Define. * config/m68k/m68k.c (FL_FOR_isa_20): Add FL_CAS. * config/m68k/sync.md: Use TARGET_CAS instead of (TARGET_68020 || TARGET_68040).

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@182475 138bc75d-0d04-0410-961f-82ee72b054a4